[package]
name = "bacnet-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "BACnet HTTP REST API and MCP server gateway"
keywords = ["bacnet", "building-automation", "gateway", "mcp", "rest-api"]
categories = ["network-programming", "web-programming::http-server"]

[dependencies]
bacnet-types.workspace = true
bacnet-encoding.workspace = true
bacnet-services.workspace = true
bacnet-transport.workspace = true
bacnet-network.workspace = true
bacnet-client.workspace = true
bacnet-objects.workspace = true
bacnet-server.workspace = true
bytes.workspace = true

tokio = { workspace = true, features = ["net", "rt", "rt-multi-thread", "sync", "macros", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing.workspace = true

# HTTP API deps (feature-gated)
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
subtle = { version = "2", optional = true }

# MCP deps (feature-gated)
rmcp = { version = "1", features = ["server", "transport-streamable-http-server"], optional = true }
schemars = { version = "1", optional = true }

# Binary deps (feature-gated)
clap = { version = "4", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tokio-util = { version = "0.7", features = ["rt"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["net", "rt", "sync", "macros", "time", "test-util"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
axum = "0.8"
subtle = "2"
rmcp = { version = "1", features = ["server", "transport-streamable-http-server"] }
schemars = "1"

[features]
default = []
http = ["dep:axum", "dep:tower", "dep:subtle"]
mcp = ["dep:rmcp", "dep:schemars"]
bin = ["http", "mcp", "dep:clap", "dep:tracing-subscriber", "dep:tokio-util"]
sc-tls = ["bacnet-transport/sc-tls"]
serial = ["bacnet-transport/serial"]

[[bin]]
name = "bacnet-gateway"
path = "src/main.rs"
required-features = ["bin"]
