[package]
name = "bacnet-java"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Java/Kotlin bindings for rusty-bacnet via UniFFI"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "bacnet_java"

[dependencies]
uniffi = { version = "0.31", features = ["tokio"] }
bacnet-types = { workspace = true }
bacnet-encoding = { workspace = true }
bacnet-services = { workspace = true }
bacnet-transport = { workspace = true, features = ["ipv6", "sc-tls"] }
bacnet-client = { workspace = true, features = ["ipv6"] }
bacnet-server = { workspace = true }
bacnet-objects = { workspace = true }
bacnet-network = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "macros"] }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
bacnet-transport = { workspace = true, features = ["ipv6", "sc-tls", "serial", "ethernet"] }
