[package]
name = "bacnet-objects"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "BACnet object model: traits, database, and standard object types"
keywords = ["bacnet", "building-automation", "objects", "ashrae"]
categories = ["network-programming"]

[dependencies]
bacnet-types.workspace = true
bacnet-encoding.workspace = true
bytes.workspace = true
tracing.workspace = true

[lints]
workspace = true
