[package]
name = "bacnet-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "BACnet server: APDU dispatch and service handlers"
keywords = ["bacnet", "building-automation", "server", "async"]
categories = ["network-programming"]

[dependencies]
bacnet-types.workspace = true
bacnet-encoding.workspace = true
bacnet-services.workspace = true
bacnet-transport.workspace = true
bacnet-network.workspace = true
bacnet-objects.workspace = true
bytes.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["net", "rt", "sync", "macros", "time"] }
tokio-rustls = { workspace = true, optional = true }

[features]
sc-tls = ["bacnet-transport/sc-tls", "tokio-rustls"]

[dev-dependencies]
bacnet-transport.workspace = true
tokio = { workspace = true, features = ["net", "rt-multi-thread", "sync", "macros", "time", "test-util"] }

[lints]
workspace = true
