[package]
name = "bacnet-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "BACnet/SC thin client for JavaScript/TypeScript via WebAssembly"
repository = "https://github.com/jscott3201/rusty-bacnet"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bacnet-types.workspace = true
bacnet-encoding.workspace = true
bacnet-services.workspace = true
bytes.workspace = true
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "BinaryType",
    "CloseEvent",
    "Blob",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true
